--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ button:focus {
 
 /* Header */
 .header {
-  background-color: #050a13;
+  background-color: transparent;
   position: fixed;
   top: 0;
   width: 100%;
@@ -87,6 +87,11 @@ button:focus {
   justify-content: space-between;
   align-items: center;
   z-index: 1;
+  transition: all 300ms ease;
+}
+
+.header--dark{
+  background-color: var(--color-primary);
 }
 
 .header__logo {
@@ -102,6 +107,15 @@ button:focus {
 
 .header__logo__title {
   font-size: 1.8rem;
+}
+
+.header__toggle {
+  display: none;
+  color: var(--color-white);
+  font-size: 1.5rem;
+  position: absolute;
+  top: 1.3rem;
+  right: 1rem;
 }
 
 .header__menu {
@@ -386,13 +400,21 @@ button:focus {
   .header {
     flex-direction: column;
     align-items: start;
+    background-color: var(--color-primary);
   }
-
+  .header__toggle {
+    display: block;
+  }
   .header__menu {
+    display: none;
     flex-direction: column;
     text-align: center;
     padding: 1rem 4rem;
     gap: 1rem;
+  }
+
+  .header__menu.open{
+    display: flex;
   }
 
   .header__nav {
